# HackathonsCanada

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  celerybeat-schedule  compose.override.yml  compose.yml  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: build.yml  update-docker.yml
canadahackers/: asgi.py  celery.py  local_settings.py  local_settings.py.template  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  filters.py  forms.py  models.py  scraper.py  signals.py  tasks.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_alter_hackathon_end_date_alter_hackathon_is_public_and_more.py  0002_alter_hackathon_scrape_source_alter_hackathon_source.py  0002_category_hackathon_created_at_hackathon_created_by_and_more.py  0002_hackathon_hybrid_hackathon_maximum_education_level_and_more.py  0002_remove_curatorrequest_reviewed_by_hackathon_hybrid_and_more.py  0003_alter_hackathonlocation_country.py  0003_alter_vote_is_upvote.py  0003_notificationpolicy_alter_hacker_managers_and_more.py  0004_alter_hackathon_bg_image_alter_hackathon_fg_image.py  0004_remove_notificationpolicy_weekly_or_monthly_not_both_and_more.py  0005_hackathonlocation_location_alter_hacker_managers_and_more.py  0006_hackathon_review_status.py  0007_curatorrequest.py  0008_hacker_birthday_hacker_personal_website.py  0009_school.py  0010_alter_hacker_birthday_alter_hacker_education.py  0011_remove_hackathon_image_hackathon_bg_image_and_more.py  0012_hackathon_venue_alter_hackathon_location.py  0013_remove_hackathon_start_date_lt_end_date_and_more.py  0014_remove_hackathon_venue_alter_hackathon_id_and_more.py  0015_alter_hackathon_id.py  0016_alter_hackathonlocation_location.py  0016_hackathonlocation_venue_and_more.py  0016_school_added_by_school_created_at_school_public.py  0017_hackathon_down_vote_hackathon_up_vote.py  0018_hackathon_unique_id.py  0019_merge_20241201_2004.py  0020_remove_hackathon_start_date_lte_end_date_and_more.py  0021_hackathon_start_date_lte_end_date.py  0022_hackathon_dup.py  0023_alter_hackathon_dup.py  0024_downvote_upvote.py  0025_hackathon_count_downvotes_hackathon_count_upvotes.py  0026_remove_upvote_from_hacker_remove_upvote_hackathon_id_and_more.py  0027_curatorrequest_review_status.py  0028_curatorrequest_created_by.py  0029_remove_hackathon_is_diversity_and_more.py  0030_hackathon_is_diversity_hackathon_is_nonenglish_and_more.py  0031_alter_hackathon_source.py  (+9 more)
core/scraping/: abstractdatasource.py  devpost.py  ethglobal.py  hackclubsource.py  mlh.py
dischannelsaver/: admin.py  apps.py  models.py  tasks.py  views.py
dischannelsaver/migrations/: 0001_initial.py  0002_alter_hackathonchannel_discord_id.py
dischannelsaver/utils/: archival.py  disc.py  nomenclature.py
discord/: models.py
docs/: CNAME
fixtures/: redirects.json
geodj/: docker-compose.yml  manage.py
geodj/geodj/: asgi.py  settings.py  urls.py  wsgi.py
hackathons_canada/: asgi.py  callbacks.py  celery.py  local_settings.py.example  settings.py  urls.py  wsgi.py
hackathons_canada/crispy/: field.html
hackathons_canada/geodjango/: admin.py  models.py  utils.py
scripts/: db-init.sql  entrypoint.sh  postgres-init-db.sh
scripts/django/: start
scripts/flower/: start
settings/: __init__.py
settings/components/: __init__.py  common.py
settings/config/: .env.template
settings/environments/: development.py  local.example..py  production.py
static/css/: auth.css  styles.css  tailwind.min.css
static/js/: calendar.js  hackathon_interactions.js  hackathons.js  script.js
templates/: Calendar.html  add_hackathon.html  base.html  calendar.html  curator_request_success.html  hackathons.html  home.html  landingpage.html  saved_hackathons.html
templates/account/: account_inactive.html  base_reauthenticate.html  confirm_login_code.html  email.html  email_change.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  reauthenticate.html  request_login_code.html  setting.html  signup.html  signup_closed.html  verification_sent.html  (+1 more)
wahootailwind/: apps.py
(+53 files in other folders)
