[tool.poetry]
name = "hackathons canada"
version = "0.4.5"
description = "A platform to connect Hackers to Hackathons"
authors = ["Jason <git@jasoncameron.dev>"]
license = "GPLv3"
readme = "README.md"
#package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
docker = "^7.1.0"
"discord.py" = "^2.4.0"
django-crispy-forms = "^2.2"
crispy-bootstrap4 = "^2024.1"
django-location-field = "^2.7.3"
flower = "^2.0.1"
celery = {extras = ["redis"], version = "^5.4.0"}
django-allauth = {extras = ["socialaccount"], version = "0.63.5"}
django-countries = {extras = ["pyuca"], version = "^7.6.1"}
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
django-stubs = {version = "^5.0.2", extras = ["compatible-mypy"]}
ruff = "^0.5.1"


[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
