[tool.poetry]
name = "hackathons canada"
version = "0.4.5"
description = "A platform to connect Hackers to Hackathons"
authors = ["Jason <git@jasoncameron.dev>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
docker = "^7.1.0"
"discord.py" = "^2.4.0"
django-crispy-forms = "^2.2"
crispy-bootstrap4 = "^2024.1"
flower = "^2.0.1"
celery = { extras = ["redis"], version = "^5.4.0" }
django-allauth = { extras = ["socialaccount"], version = "0.63.5" }
django-countries = { extras = ["pyuca"], version = "^7.6.1" }
pillow = "^10.4.0"
django-unfold = "^0.30.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
django-stubs = { version = "^5.0.2", extras = ["compatible-mypy"] }
ruff = "^0.5.1"
djhtml = "^3.0.6"
celery-types = "^0.22.0"
pre-commit = "^3.7.1"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"


[tool.mypy]
plugins = ["mypy_django_plugin.main"]
exclude = ["migrations", "node_modules", "static", "venv", ".idea"]

[tool.django-stubs]
django_settings_module = "hackathons_canada.settings"


[tool.ruff]
exclude = ["migrations", "node_modules", "static", "venv", ".idea", ".git"]
fix = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
